--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
     "cordova-plugin-whitelist": "^1.3.1",
     "ionic-angular": "3.5.0",
     "ionic-plugin-keyboard": "^2.2.1",
+    "ionic2-auto-complete": "^1.6.2-alpha",
     "ionicons": "3.0.0",
+    "node-js-marker-clusterer": "^1.0.0",
     "rxjs": "5.4.0",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.12"
